--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ quarkus.datasource.password=468fc48d411ca1fd89f127dc0988de8bc0887713f62fa64ac85c
 quarkus.datasource.jdbc.url=jdbc:postgresql://ec2-54-163-47-62.compute-1.amazonaws.com:5432/d2l9bi82236l3l
 
 # CORS
-quarkus.http.cors=true
-quarkus.http.cors.origins=*
+#quarkus.http.cors=true
+#quarkus.http.cors.origins=*
