--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://ec2-54-163-47-62.compute-1.amazona
 # CORS
 quarkus.http.cors=true
 quarkus.http.cors.origins=*
+
+application=DEVELOPMENT
