Add the kubernetes extensions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,10 @@
 %dev.quarkus.kubernetes.env.vars.db-name=d2l9bi82236l3l
 
 #PROD-Profile
-quarkus.kubernetes.env.vars.db-username=
-quarkus.kubernetes.env.vars.db-password=
-quarkus.kubernetes.env.vars.db-url=
-quarkus.kubernetes.env.vars.db-name=
+quarkus.kubernetes.env.vars.db-username=default
+quarkus.kubernetes.env.vars.db-password=default
+quarkus.kubernetes.env.vars.db-url=default
+quarkus.kubernetes.env.vars.db-name=default
 
 #Datasource Variable
 quarkus.datasource.db-kind=postgresql 
