remove the prod values

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,10 @@
 %dev.db-name=d2l9bi82236l3l
 
 #PROD-Profile
-db-username=shop
-db-password=shop
-db-url=postgresql
-db-name=coffeeshop
+db-username=
+db-password=
+db-url=
+db-name=
 
 #Datasource Variable
 quarkus.datasource.db-kind=postgresql 
