--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,6 @@ quarkus.datasource.db-kind=postgresql
 #PROD-Profile
 %prod.quarkus.kubernetes-config.enabled=true
 %prod.quarkus.kubernetes-config.config-maps=product-service-config
-%prod.quarkus.kubernetes-config.namespace=froberge-dev
+# If desired, the namespace in which to find the config can be added
+# currently this is not in use to simplify the deployment. 
+#%prod.quarkus.kubernetes-config.namespace=froberge-dev
