--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ quarkus.datasource.db-kind=postgresql
 %prod.quarkus.kubernetes-config.config-maps=product-service-config
 # If desired, the namespace in which to find the config can be added
 # currently this is not in use to simplify the deployment. 
-#%prod.quarkus.kubernetes-config.namespace=froberge-dev
+#%prod.quarkus.kubernetes-config.namespace=[TBD]
