--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,10 @@ quarkus.datasource.db-kind=postgresql
 
 #PROD-Profile
 %prod.quarkus.kubernetes-config.enabled=true
-%prod.quarkus.kubernetes-config.config-maps=product-service-config
+%prod.quarkus.kubernetes-config.config-maps=service-config
+%prod.quarkus.kubernetes-config.secrets.enabled=true
+%prod.quarkus.kubernetes-config.secrets-maps=external-db-secret
+
 # If desired, the namespace in which to find the config can be added
 # currently this is not in use to simplify the deployment. 
 #%prod.quarkus.kubernetes-config.namespace=[TBD]
