fix the secrets name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,9 @@ quarkus.datasource.db-kind=postgresql
 %prod.quarkus.kubernetes-config.enabled=true
 %prod.quarkus.kubernetes-config.config-maps=service-config
 %prod.quarkus.kubernetes-config.secrets.enabled=true
-%prod.quarkus.kubernetes-config.secrets=external-db-secret
+%prod.quarkus.kubernetes-config.secrets=external-postgresdb-secret
 
 # If desired, the namespace in which to find the config can be added
 # currently this is not in use to simplify the deployment. 
+# Just apply in proper namespace
 #%prod.quarkus.kubernetes-config.namespace=[TBD]
