add default value to local database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,10 @@
 quarkus.datasource.db-kind=postgresql 
 
 #DEV-Profile
-%dev.quarkus.datasource.username=[TBD]
-%dev.quarkus.datasource.password=[TBD]
-%dev.quarkus.datasource.jdbc.url=[TBD]
+%dev.quarkus.datasource.username=shop
+%dev.quarkus.datasource.password=shop001
+%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/shop
+
 
 #PROD-Profile
 %prod.quarkus.kubernetes-config.enabled=true
